[tool.poetry]
name = "flaskproject"
version = "0.1.0"
description = ""
authors = ["Lekhman-vold <volodya.l@yahoo.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^2.0.1"
pyTelegramBotAPI = "^3.7.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
